...
    <string name="collected">Collected</string>
    <string name="total_score">Total Score</string>
    <string name="transfer_to_the_bank">Transfer to the bank</string>
    <string name="cancel">Cancel</string>
    <string name="send">Send</string>
    <string name="enter_amount_to_transfer">Enter amount to transfer</string>
    <string name="transfer_to_a_friend">Transfer to a friend</string>
    <string name="spare_change">Spare Change</string>
    <string name="enter_friend_s_email">Enter friend\'s email</string>
</resources>

